--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
               </div>
             </div>
           <div class="buffer col-12"></div>
-          <button class="buttons btn-xl"></button>
+          <a href="order.html">
+            <button class="buttons btn-xl"></button>
+          </a> 
           <div class="buffer col-12"></div>
           <div class="buffer col-12"></div>
           <hr class="justify-content-center col-12 w-100">
