some page updates
fixed some typos

--- a/order.html
+++ b/order.html
@@ -30,7 +30,7 @@
         <div class="buffer"></div>
     <h2>Delivery Information</h2>
     <div class="buffer"></div>
-            <h3>Delivary Destination: </h3><br>
+            <h3>Delivery Destination: </h3><br>
             Street Address: <input type ="text" name="destStreet" required><br>
             City: <input type ="text" name="destCity" required><br>
             State: <input type ="text" name="destState" required><br>
@@ -46,7 +46,7 @@
             Recipient Name <input type ="text" name="recName" required><br>
 
             <div class="buffer"></div>
-            <h3>Delivary Origin: </h3><br>
+            <h3>Delivery Origin: </h3><br>
             Street Address: <input type ="text" name="oriStreet" required><br>
             City: <input type ="text" name="oriCity" required><br>
             State: <input type ="text" name="oriState" required><br>
