--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="text-center col-12">
           
         </header>
-        <h1><strong>Delivery Club</strong></h1>
+        <h1 class="justify-content-center col-12 w-100"><strong>Delivery Club</strong></h1>
           <hr id="hh">
           <div class="buffer col-12"></div>
         <section class="text-center col-12 align-items-baseline">
