B-12345 some changes made to play around

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <a href="order.html">
             <button class="buttons btn-xl"></button>
           </a> 
+          <!-- <a href="indexA.html">
+            <button class="buttonA btn-xl">Find Your Hero</button>
+          </a> -->
           <div class="buffer col-12"></div>
           <div class="buffer col-12"></div>
           <hr class="justify-content-center col-12 w-100">
